# text-editor

./: .gitignore  CMakeLists.txt  Makefile  README.md  vim--
include/: cli.h  editor.h  errors.h  keypress.h  terminal.h
scripts/: build.sh  clean.sh  install.sh
src/: Makefile  cli.c  editor.c  errors.c  keypress.c  keypress_backup.c  main.c  temp.cpp  terminal.c  termios.c  termios_config.c
src/editor/: editor.c
